// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header: Component should render correctly 1`] = `
<div
  style={
    Object {
      "alignItems": "flex-start",
      "color": "#1d1d20",
      "display": "flex",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "padding": "18px 0",
      "width": "100%",
    }
  }
>
  <div />
  <Component
    customStyles={
      Object {
        "backgroundColor": "transparent",
        "position": "absolute",
        "right": 0,
        "top": 6,
      }
    }
  >
    <MenuIcon />
  </Component>
</div>
`;

exports[`Header: Component should render with children and custom styles 1`] = `
<div
  style={
    Object {
      "alignItems": "flex-start",
      "backgroundColor": "#FFF",
      "color": "#1d1d20",
      "display": "flex",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "padding": "18px 0",
      "width": "100%",
    }
  }
>
  <div />
  <Component
    customStyles={
      Object {
        "backgroundColor": "transparent",
        "position": "absolute",
        "right": 0,
        "top": 6,
      }
    }
  >
    icon
  </Component>
</div>
`;
